2.0.0a27
 - feat: add developer mode
 - feat: display images on hover in polygon window in QuickView
 - feat: implement loading of (polygon) filters from file
 - feat: implement session saving and opening
 - feat: added perceptive colormaps and set viridis as default
 - feat: allow to set hue range for feature-colored scatter plots
 - fix: hide confusing "Advances Export" plot menu in developer mode
 - fix: only show scalar features in QuickView feature selection
 - fix: QuickView -> Event -> Features labels in table were drawn
   on top of each other
 - fix: minor redrawing issues
 - fix: AttributeError when removing a plot on macOS
 - fix: increase maximum size of plots by factor of 100
 - fix: editing a polygon filter deselected it from the filter
 - enh: Increased speed in QuickView when scrolling through events
 - enh: Added pyqtgraph version check
2.0.0a26
 - feat: implement plot export
 - feat: implement filter export
 - fix: fix plot export in right-click menu (forked pyqtgraph)
 - ref: refactor block matrix and reset font sizes
 - build: make sure latest libraries of dclab and pyqtgraph are used
2.0.0a25
 - feat: implement data export
 - feat: implement simple computation of basic statistics
 - fix: pipeline modified plain dataset filter
 - fix: allow to remove all datasets or filters
 - fix: failed to load some datasets b/c of zero-valued meta data
 - fix: toggle buttons in Block Matrix not functional
 - enh: update font sizes
 - docs: minor update
2.0.0a24
 - implemented polygon filters
 - condense context menus, add export context menu to all plots
 - add computation of Young's modulus and crosstalk correction
 - add user-defined fluorescence labels in QuickView
 - add legend to trace in QuickView
 - populate metadata panel
 - implement multiple subplots per plot, plot title, plot labels,
   legend, and event count
 - refactor data model
 - functionalize buttons in analysis view
 - correctly handle datasets with different sets of features
2.0.0a23